added form attribute

--- a/countdown-timer/index.html
+++ b/countdown-timer/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <p class="heading">10 JS Project | <span class="pro-heading">Countdown Timer </span></p>
+
+    <label for="fname">Date: </label>
+    <input type="text" id="fname" name="fname" value="2022" style="text-align:center">
+
     <div class="container">
 
 
