completed quiz app

--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -11,33 +11,33 @@
     <p class="heading">10 JS Project |<span class="pro-heading"> Quiz App</span></p>
 
     <div class="container">
-        <div class="quiz-container">
-            <h3>Questions Text</h3>
+        <div class="quiz-container" id="quiz">
+            <h3 id="question">Questions Text</h3>
 
             <ul>
                 <li>
-                    <input type="radio" id="a" name="Answer">
+                    <input type="radio" id="a" name="Answer" class="answer">
 
-                    <label for="a">Answer</label>
+                    <label id="a_text" for="a">Answer</label>
                 </li>
 
                 <li>
-                    <input type="radio" id="b" name="Answer">
-                    <label for="b">Answer</label>
+                    <input type="radio" id="b" name="Answer" class="answer">
+                    <label id="b_text" for="b">Answer</label>
                 </li>
 
                 <li>
-                    <input type="radio" id="c" name="Answer">
+                    <input type="radio" id="c" name="Answer" class="answer">
 
-                    <label for="c">Answer</label>
+                    <label id="c_text" for="c">Answer</label>
                 </li>
                 <li>
-                    <input type="radio" id="d" name="Answer">
+                    <input type="radio" id="d" name="Answer" class="answer">
 
-                    <label for="d">Answer</label>
+                    <label id="d_text" for="d">Answer</label>
                 </li>
             </ul>
-            <button>Find Out</button>
+            <button id="submitbtn" class="submit">Find Out</button>
         </div>
 
     </div>
