writing logic of the recipe app

--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <header>
-            <h1 style="color: rgba(252,70,107,1)">CSP Recipe</h1>
+            <h1 style="color: rgba(252,70,107,1)">CSP <br /> Recipe</h1>
             <form class="search-bar">
                 <input type='text' />
                 <i class="fab fa-searchengin btn-search"></i>
@@ -29,8 +29,8 @@
             </ul>
         </div>
 
-        <div class="meals">
-            <div class="meal">
+        <div class="meals" id="meals">
+            <!-- <div class="meal">
                 <div class="meal-header">
                     <span class="random">
                         Random Recipe
@@ -44,7 +44,7 @@
                     <h4>Vegiee veggies</h4>
 
                 </div>
-            </div>
+            </div> -->
         </div>
 
     </div>
