--- a/RecipeApp/index.html
+++ b/RecipeApp/index.html
@@ -15,17 +15,21 @@
         <header>
             <h1 style="color: rgba(252,70,107,1)">CSP <br /> Recipe</h1>
             <form class="search-bar">
-                <input type='text' />
+                <input type='text' placeholder="Search Recipe" />
                 <i class="fab fa-searchengin btn-search"></i>
             </form>
         </header>
 
         <div class="fav-container" >
-            <h3>Favorites Meals</h3>
-            <ul class="fav-meals">
-                <li><img src="https://www.themealdb.com/images/media/meals/xqwwpy1483908697.jpg" alt="xqwwpy1483908697.jpg"><span>Dose</span></li>
+
+                <h3>Favorites Meals</h3>
+
+
+
+            <ul class="fav-meals" id="fav-meals">
+	 <!-- <li><img src="https://www.themealdb.com/images/media/meals/xqwwpy1483908697.jpg" alt="xqwwpy1483908697.jpg"><span>Dose</span></li>
                 <li><img src="https://www.themealdb.com/images/media/meals/md8w601593348504.jpg" alt="md8w601593348504.jpg"><span>Alva</span></li>
-                <li><img src="https://www.themealdb.com/images/media/meals/vqpwrv1511723001.jpg" alt="liitlebkaes"><span>Little Baked</span></li>
+                <li><img src="https://www.themealdb.com/images/media/meals/vqpwrv1511723001.jpg" alt="liitlebkaes"><span>Little Baked</span></li> -->
             </ul>
         </div>
 
